--- a/calculating.html
+++ b/calculating.html
@@ -32,8 +32,8 @@
 </section>
 
 <section>
-<section id="slide-org5cbb2b6">
-<h2 id="org5cbb2b6">Wie rechnet ein Computer?</h2>
+<section id="slide-org3fc6945">
+<h2 id="org3fc6945">Wie rechnet ein Computer?</h2>
 <p>
 Er verknüpft Bitstrings miteinander. Dieses Vorgehen nennt man Boolsche
 Algebra.
@@ -42,15 +42,15 @@ Algebra.
 </section>
 </section>
 <section>
-<section id="slide-orgcdcb9ca">
-<h2 id="orgcdcb9ca">Boolsche Algebra</h2>
+<section id="slide-org0a51a8f">
+<h2 id="org0a51a8f">Boolsche Algebra</h2>
 <p>
 In der Regel entspricht der Wert 0 False (Falsch) und 1 True (Wahr)
 </p>
 
 </section>
-<section id="slide-org740957a">
-<h3 id="org740957a">NOT Verknüpfung</h3>
+<section id="slide-orgc76f361">
+<h3 id="orgc76f361">NOT Verknüpfung</h3>
 <p>
 Schreibweise: ¬x oder !x oder NOT x
 </p>
@@ -89,8 +89,8 @@ Schreibweise: ¬x oder !x oder NOT x
 </table>
 
 </section>
-<section id="slide-org790278a">
-<h3 id="org790278a">AND Verknüpfung</h3>
+<section id="slide-orgf3aa25e">
+<h3 id="orgf3aa25e">AND Verknüpfung</h3>
 <p>
 Schreibweise: x ∧ y oder x &amp; y oder x AND y
 </p>
@@ -135,8 +135,8 @@ Schreibweise: x ∧ y oder x &amp; y oder x AND y
 
 
 </section>
-<section id="slide-org9a8fee0">
-<h3 id="org9a8fee0">OR Verknüpfung</h3>
+<section id="slide-org7987771">
+<h3 id="org7987771">OR Verknüpfung</h3>
 <p>
 Schreibweise: x ∨ y oder x | y oder x OR y
 </p>
@@ -180,8 +180,8 @@ Schreibweise: x ∨ y oder x | y oder x OR y
 </table>
 
 </section>
-<section id="slide-orgc6a30e8">
-<h3 id="orgc6a30e8">XOR Verknüpfung</h3>
+<section id="slide-org867f28e">
+<h3 id="org867f28e">XOR Verknüpfung</h3>
 <p>
 Schreibweise: x ⊕ y
 </p>
@@ -219,13 +219,13 @@ Schreibweise: x ⊕ y
 </table>
 
 </section>
-<section id="slide-org7f52d26">
-<h3 id="org7f52d26">Verknüpfungen können beliebig miteinander kombiniert werden</h3>
-<div class="outline-text-3" id="text-org7f52d26">
+<section id="slide-org574f4d2">
+<h3 id="org574f4d2">Verknüpfungen können beliebig miteinander kombiniert werden</h3>
+<div class="outline-text-3" id="text-org574f4d2">
 </div>
 </section>
-<section id="slide-org52dd440">
-<h4 id="org52dd440">(x ∨ y) ∧ ¬x</h4>
+<section id="slide-orgf64cd5e">
+<h4 id="orgf64cd5e">(x ∨ y) ∧ ¬x</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -285,12 +285,12 @@ Schreibweise: x ⊕ y
 </table>
 
 </section>
-<section id="slide-org4d2a9f3">
-<h4 id="org4d2a9f3">Achtung Klammern: ¬(x ∧ y) != ¬x ∧ ¬y</h4>
+<section id="slide-org9272720">
+<h4 id="org9272720">Achtung Klammern: ¬(x ∧ y) != ¬x ∧ ¬y</h4>
 
 </section>
-<section id="slide-org6026619">
-<h4 id="org6026619">¬(x ∧ y)</h4>
+<section id="slide-org3b8e06a">
+<h4 id="org3b8e06a">¬(x ∧ y)</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -343,8 +343,8 @@ Schreibweise: x ⊕ y
 </table>
 
 </section>
-<section id="slide-orgfff1dd7">
-<h4 id="orgfff1dd7">¬x ∧ ¬y</h4>
+<section id="slide-org57c4ec0">
+<h4 id="org57c4ec0">¬x ∧ ¬y</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -404,14 +404,14 @@ Schreibweise: x ⊕ y
 </table>
 
 </section>
-<section id="slide-orgd41078d">
-<h4 id="orgd41078d">Tricks</h4>
-<div class="outline-text-4" id="text-orgd41078d">
+<section id="slide-org426b377">
+<h4 id="org426b377">Tricks</h4>
+<div class="outline-text-4" id="text-org426b377">
 </div>
 <ul class="org-ul">
-<li><a id="orgeb6c515"></a>x ∨ 1 = 1<br /></li>
-<li><a id="orgd2e627f"></a>x ∧ 1 = x<br /></li>
-<li><a id="orgb10cf9e"></a>DeMorgan&rsquo;s Gesetz<br />
+<li><a id="org9861247"></a>x ∨ 1 = 1<br /></li>
+<li><a id="org87babb8"></a>x ∧ 1 = x<br /></li>
+<li><a id="org63f41df"></a>DeMorgan&rsquo;s Gesetz<br />
 <ul>
 <li>¬(x ∧ y) = ¬x ∨ ¬y</li>
 <li>x ∧ y = ¬(¬x ∨ ¬y)</li>
@@ -423,8 +423,8 @@ Schreibweise: x ⊕ y
 </ul>
 
 </section>
-<section id="slide-orgf6fc645">
-<h3 id="orgf6fc645">Übungen</h3>
+<section id="slide-org3a55ea7">
+<h3 id="org3a55ea7">Übungen</h3>
 <ul>
 <li>(x ∨ ¬y) ∧ (¬x ∨ ¬y)</li>
 <li>(x ∨ y) ∨ ¬y</li>
@@ -432,8 +432,8 @@ Schreibweise: x ⊕ y
 
 </ul>
 </section>
-<section id="slide-org4556540">
-<h3 id="org4556540">Lösungen</h3>
+<section id="slide-org9ce639b">
+<h3 id="org9ce639b">Lösungen</h3>
 <ul>
 <li>¬y</li>
 <li>1</li>
@@ -444,13 +444,13 @@ Schreibweise: x ⊕ y
 </section>
 </section>
 <section>
-<section id="slide-org089c039">
-<h2 id="org089c039">Bitweise Operatoren</h2>
-<div class="outline-text-2" id="text-org089c039">
+<section id="slide-org473e32e">
+<h2 id="org473e32e">Bitweise Operatoren</h2>
+<div class="outline-text-2" id="text-org473e32e">
 </div>
 </section>
-<section id="slide-orga646a13">
-<h3 id="orga646a13">NOT</h3>
+<section id="slide-org726b8c0">
+<h3 id="org726b8c0">NOT</h3>
 <p>
 Genutzt um eine Zahl zu inkrementieren, wenn man nur Bits bis zur nächsten 0 verknüpft
 </p>
@@ -466,8 +466,8 @@ NOT 10101011  (Dezimal 171)
   = 01010100  (Dezimal 84)
 </pre>
 </section>
-<section id="slide-org99b3af9">
-<h3 id="org99b3af9">AND</h3>
+<section id="slide-org2c346a7">
+<h3 id="org2c346a7">AND</h3>
 <p>
 Genutzt um zu überprüfen, ob ein Bit gesetzt ist
 </p>
@@ -481,8 +481,8 @@ AND 0011
   = 0010
 </pre>
 </section>
-<section id="slide-orged9301e">
-<h3 id="orged9301e">OR</h3>
+<section id="slide-org713a637">
+<h3 id="org713a637">OR</h3>
 <p>
 Genutzt um Bits zu setzen
 </p>
@@ -498,8 +498,8 @@ OR 1000
 
 
 </section>
-<section id="slide-orgea65272">
-<h3 id="orgea65272">XOR</h3>
+<section id="slide-orgd3e762a">
+<h3 id="orgd3e762a">XOR</h3>
 <p>
 Genutzt um Bits zu swappen (tauschen)
 </p>
@@ -515,8 +515,8 @@ XOR 1010
 </pre>
 
 </section>
-<section id="slide-orgdd00613">
-<h3 id="orgdd00613">Bitshift Links &lt;&lt;</h3>
+<section id="slide-org131fab2">
+<h3 id="org131fab2">Bitshift Links &lt;&lt;</h3>
 <p>
 Genutzt um Zahlen mit 2 zu multiplizieren
 </p>
@@ -529,8 +529,8 @@ Genutzt um Zahlen mit 2 zu multiplizieren
 </pre>
 
 </section>
-<section id="slide-org3b345b0">
-<h3 id="org3b345b0">Bitshift Rechts &gt;&gt;</h3>
+<section id="slide-orge1a410c">
+<h3 id="orge1a410c">Bitshift Rechts &gt;&gt;</h3>
 <p>
 Genutzt um Zahlen durch 2 zu dividieren
 </p>
@@ -543,8 +543,8 @@ Genutzt um Zahlen durch 2 zu dividieren
 </pre>
 
 </section>
-<section id="slide-org86ac789">
-<h3 id="org86ac789"><i>Addieren (OR mit Übertrag)</i></h3>
+<section id="slide-org41b35db">
+<h3 id="org41b35db"><i>Addieren (OR mit Übertrag)</i></h3>
 <p>
 Wird eine 1 mit einer 1 verknüpft, haben wir einen Überlauf. Um diesen zu
 berücksichtigen schreiben wir 0 und merken uns 1. Diese 1 wird mit der nächsten
@@ -564,8 +564,8 @@ OR 1000 (Dezimal 8)
 </pre>
 
 </section>
-<section id="slide-orgd541d69">
-<h3 id="orgd541d69"><i>Subtrahieren (OR mit Übertrag)</i></h3>
+<section id="slide-orga068886">
+<h3 id="orga068886"><i>Subtrahieren (OR mit Übertrag)</i></h3>
 <p>
 Wie addieren, jedoch wird die Zahl, die subtrahiert wird, zuvor einmal mit NOT
 verknüpft. Es muss von Anfang an eine 1 als Übertrag genutzt werden
@@ -582,6 +582,17 @@ OR 1101 (Dezimal !2)
      11  Übertrag
  = 0110 (Dezimal 6)
 </pre>
+
+</section>
+</section>
+<section>
+<section id="slide-org1720915">
+<h2 id="org1720915">Ausblick</h2>
+<ul>
+<li>Komprimieren von Daten</li>
+<li>Encoding von Bildern</li>
+
+</ul>
 </section>
 </section>
 </div>
