--- a/calculating.html
+++ b/calculating.html
@@ -32,8 +32,8 @@
 </section>
 
 <section>
-<section id="slide-org3fc6945">
-<h2 id="org3fc6945">Wie rechnet ein Computer?</h2>
+<section id="slide-org1d2f09b">
+<h2 id="org1d2f09b">Wie rechnet ein Computer?</h2>
 <p>
 Er verknüpft Bitstrings miteinander. Dieses Vorgehen nennt man Boolsche
 Algebra.
@@ -42,15 +42,15 @@ Algebra.
 </section>
 </section>
 <section>
-<section id="slide-org0a51a8f">
-<h2 id="org0a51a8f">Boolsche Algebra</h2>
+<section id="slide-org729bb23">
+<h2 id="org729bb23">Boolsche Algebra</h2>
 <p>
 In der Regel entspricht der Wert 0 False (Falsch) und 1 True (Wahr)
 </p>
 
 </section>
-<section id="slide-orgc76f361">
-<h3 id="orgc76f361">NOT Verknüpfung</h3>
+<section id="slide-org1a4a0cd">
+<h3 id="org1a4a0cd">NOT Verknüpfung</h3>
 <p>
 Schreibweise: ¬x oder !x oder NOT x
 </p>
@@ -89,8 +89,8 @@ Schreibweise: ¬x oder !x oder NOT x
 </table>
 
 </section>
-<section id="slide-orgf3aa25e">
-<h3 id="orgf3aa25e">AND Verknüpfung</h3>
+<section id="slide-org10b6923">
+<h3 id="org10b6923">AND Verknüpfung</h3>
 <p>
 Schreibweise: x ∧ y oder x &amp; y oder x AND y
 </p>
@@ -135,8 +135,8 @@ Schreibweise: x ∧ y oder x &amp; y oder x AND y
 
 
 </section>
-<section id="slide-org7987771">
-<h3 id="org7987771">OR Verknüpfung</h3>
+<section id="slide-org93760cf">
+<h3 id="org93760cf">OR Verknüpfung</h3>
 <p>
 Schreibweise: x ∨ y oder x | y oder x OR y
 </p>
@@ -180,8 +180,8 @@ Schreibweise: x ∨ y oder x | y oder x OR y
 </table>
 
 </section>
-<section id="slide-org867f28e">
-<h3 id="org867f28e">XOR Verknüpfung</h3>
+<section id="slide-org18a12de">
+<h3 id="org18a12de">XOR Verknüpfung</h3>
 <p>
 Schreibweise: x ⊕ y
 </p>
@@ -219,13 +219,13 @@ Schreibweise: x ⊕ y
 </table>
 
 </section>
-<section id="slide-org574f4d2">
-<h3 id="org574f4d2">Verknüpfungen können beliebig miteinander kombiniert werden</h3>
-<div class="outline-text-3" id="text-org574f4d2">
+<section id="slide-orgbd67892">
+<h3 id="orgbd67892">Verknüpfungen können beliebig miteinander kombiniert werden</h3>
+<div class="outline-text-3" id="text-orgbd67892">
 </div>
 </section>
-<section id="slide-orgf64cd5e">
-<h4 id="orgf64cd5e">(x ∨ y) ∧ ¬x</h4>
+<section id="slide-org2e210ad">
+<h4 id="org2e210ad">(x ∨ y) ∧ ¬x</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -255,7 +255,7 @@ Schreibweise: x ⊕ y
 <td class="org-left"><b>0</b></td>
 <td class="org-right">0</td>
 <td class="org-right">1</td>
-<td class="org-right">1</td>
+<td class="org-right">0</td>
 </tr>
 
 <tr>
@@ -263,7 +263,7 @@ Schreibweise: x ⊕ y
 <td class="org-left"><b>0</b></td>
 <td class="org-right">1</td>
 <td class="org-right">0</td>
-<td class="org-right">1</td>
+<td class="org-right">0</td>
 </tr>
 
 <tr>
@@ -277,7 +277,7 @@ Schreibweise: x ⊕ y
 <tr>
 <td class="org-left"><b>1</b></td>
 <td class="org-left"><b>1</b></td>
-<td class="org-right">0</td>
+<td class="org-right">1</td>
 <td class="org-right">0</td>
 <td class="org-right">0</td>
 </tr>
@@ -285,12 +285,12 @@ Schreibweise: x ⊕ y
 </table>
 
 </section>
-<section id="slide-org9272720">
-<h4 id="org9272720">Achtung Klammern: ¬(x ∧ y) != ¬x ∧ ¬y</h4>
+<section id="slide-org7f28540">
+<h4 id="org7f28540">Achtung Klammern: ¬(x ∧ y) != ¬x ∧ ¬y</h4>
 
 </section>
-<section id="slide-org3b8e06a">
-<h4 id="org3b8e06a">¬(x ∧ y)</h4>
+<section id="slide-org2fd27b6">
+<h4 id="org2fd27b6">¬(x ∧ y)</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -343,8 +343,8 @@ Schreibweise: x ⊕ y
 </table>
 
 </section>
-<section id="slide-org57c4ec0">
-<h4 id="org57c4ec0">¬x ∧ ¬y</h4>
+<section id="slide-org275c11a">
+<h4 id="org275c11a">¬x ∧ ¬y</h4>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -404,14 +404,14 @@ Schreibweise: x ⊕ y
 </table>
 
 </section>
-<section id="slide-org426b377">
-<h4 id="org426b377">Tricks</h4>
-<div class="outline-text-4" id="text-org426b377">
+<section id="slide-orga342933">
+<h4 id="orga342933">Tricks</h4>
+<div class="outline-text-4" id="text-orga342933">
 </div>
 <ul class="org-ul">
-<li><a id="org9861247"></a>x ∨ 1 = 1<br /></li>
-<li><a id="org87babb8"></a>x ∧ 1 = x<br /></li>
-<li><a id="org63f41df"></a>DeMorgan&rsquo;s Gesetz<br />
+<li><a id="orgf0ffd7f"></a>x ∨ 1 = 1<br /></li>
+<li><a id="org8626658"></a>x ∧ 1 = x<br /></li>
+<li><a id="org3986de3"></a>DeMorgan&rsquo;s Gesetz<br />
 <ul>
 <li>¬(x ∧ y) = ¬x ∨ ¬y</li>
 <li>x ∧ y = ¬(¬x ∨ ¬y)</li>
@@ -423,8 +423,8 @@ Schreibweise: x ⊕ y
 </ul>
 
 </section>
-<section id="slide-org3a55ea7">
-<h3 id="org3a55ea7">Übungen</h3>
+<section id="slide-orgc5efb8b">
+<h3 id="orgc5efb8b">Übungen</h3>
 <ul>
 <li>(x ∨ ¬y) ∧ (¬x ∨ ¬y)</li>
 <li>(x ∨ y) ∨ ¬y</li>
@@ -432,8 +432,8 @@ Schreibweise: x ⊕ y
 
 </ul>
 </section>
-<section id="slide-org9ce639b">
-<h3 id="org9ce639b">Lösungen</h3>
+<section id="slide-orgdb1fc4e">
+<h3 id="orgdb1fc4e">Lösungen</h3>
 <ul>
 <li>¬y</li>
 <li>1</li>
@@ -444,13 +444,13 @@ Schreibweise: x ⊕ y
 </section>
 </section>
 <section>
-<section id="slide-org473e32e">
-<h2 id="org473e32e">Bitweise Operatoren</h2>
-<div class="outline-text-2" id="text-org473e32e">
+<section id="slide-org02beb43">
+<h2 id="org02beb43">Bitweise Operatoren</h2>
+<div class="outline-text-2" id="text-org02beb43">
 </div>
 </section>
-<section id="slide-org726b8c0">
-<h3 id="org726b8c0">NOT</h3>
+<section id="slide-org55c1f45">
+<h3 id="org55c1f45">NOT</h3>
 <p>
 Genutzt um eine Zahl zu inkrementieren, wenn man nur Bits bis zur nächsten 0 verknüpft
 </p>
@@ -459,15 +459,12 @@ Genutzt um eine Zahl zu inkrementieren, wenn man nur Bits bis zur nächsten 0 ve
 NOT 0111  (Dezimal 7)
   = 1000  (Dezimal 8)
 
-NOT 1011  (Dezimal 11)
-  = 1100  (Dezimal 12)
-
 NOT 10101011  (Dezimal 171)
   = 01010100  (Dezimal 84)
 </pre>
 </section>
-<section id="slide-org2c346a7">
-<h3 id="org2c346a7">AND</h3>
+<section id="slide-orgd873980">
+<h3 id="orgd873980">AND</h3>
 <p>
 Genutzt um zu überprüfen, ob ein Bit gesetzt ist
 </p>
@@ -481,8 +478,8 @@ AND 0011
   = 0010
 </pre>
 </section>
-<section id="slide-org713a637">
-<h3 id="org713a637">OR</h3>
+<section id="slide-orgb133400">
+<h3 id="orgb133400">OR</h3>
 <p>
 Genutzt um Bits zu setzen
 </p>
@@ -498,8 +495,8 @@ OR 1000
 
 
 </section>
-<section id="slide-orgd3e762a">
-<h3 id="orgd3e762a">XOR</h3>
+<section id="slide-org5fe239b">
+<h3 id="org5fe239b">XOR</h3>
 <p>
 Genutzt um Bits zu swappen (tauschen)
 </p>
@@ -515,8 +512,8 @@ XOR 1010
 </pre>
 
 </section>
-<section id="slide-org131fab2">
-<h3 id="org131fab2">Bitshift Links &lt;&lt;</h3>
+<section id="slide-org127335f">
+<h3 id="org127335f">Bitshift Links &lt;&lt;</h3>
 <p>
 Genutzt um Zahlen mit 2 zu multiplizieren
 </p>
@@ -529,8 +526,8 @@ Genutzt um Zahlen mit 2 zu multiplizieren
 </pre>
 
 </section>
-<section id="slide-orge1a410c">
-<h3 id="orge1a410c">Bitshift Rechts &gt;&gt;</h3>
+<section id="slide-orga79995e">
+<h3 id="orga79995e">Bitshift Rechts &gt;&gt;</h3>
 <p>
 Genutzt um Zahlen durch 2 zu dividieren
 </p>
@@ -543,8 +540,8 @@ Genutzt um Zahlen durch 2 zu dividieren
 </pre>
 
 </section>
-<section id="slide-org41b35db">
-<h3 id="org41b35db"><i>Addieren (OR mit Übertrag)</i></h3>
+<section id="slide-orgf056c31">
+<h3 id="orgf056c31"><i>Addieren (OR mit Übertrag)</i></h3>
 <p>
 Wird eine 1 mit einer 1 verknüpft, haben wir einen Überlauf. Um diesen zu
 berücksichtigen schreiben wir 0 und merken uns 1. Diese 1 wird mit der nächsten
@@ -564,8 +561,8 @@ OR 1000 (Dezimal 8)
 </pre>
 
 </section>
-<section id="slide-orga068886">
-<h3 id="orga068886"><i>Subtrahieren (OR mit Übertrag)</i></h3>
+<section id="slide-org9be6779">
+<h3 id="org9be6779"><i>Subtrahieren (OR mit Übertrag)</i></h3>
 <p>
 Wie addieren, jedoch wird die Zahl, die subtrahiert wird, zuvor einmal mit NOT
 verknüpft. Es muss von Anfang an eine 1 als Übertrag genutzt werden
@@ -586,8 +583,8 @@ OR 1101 (Dezimal !2)
 </section>
 </section>
 <section>
-<section id="slide-org1720915">
-<h2 id="org1720915">Ausblick</h2>
+<section id="slide-org029254d">
+<h2 id="org029254d">Ausblick</h2>
 <ul>
 <li>Komprimieren von Daten</li>
 <li>Encoding von Bildern</li>
